feature: create Category UI and Call API